--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,1 @@
-<a class="page-link" href="{{ '/category1' | relative_url }}">Category 1</a>
-<a class="page-link" href="{{ '/category2' | relative_url }}">Category 2</a>
+<a class="page-link" href="{{ '/quant-interview-questions' | relative_url }}">Quant Interview Questions</a>
